--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>museum</title>
+  <link rel="icon" href="assets/favicon.ico">
   <link rel="stylesheet" href="styles/main.scss">
-  <script defer type="module" src="js/app.js"></script>
+  <script type="module" src="js/app.js" defer></script>
 </head>
 
 <body>
@@ -43,7 +44,7 @@
               </div>
             </div>
             <div class="welcome__action">
-              <a href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
+              <a href="tours/tour-welcome.html"
                 class="welcome__btn btn btn--accent" target="_blank">Discover the Louvre</a>
             </div>
           </div>
@@ -58,9 +59,9 @@
           </div>
           <ul class="visiting__cards">
             <li class="visiting__card card-visiting"><a
-                href="https://www.google.com/maps/@48.8606882,2.3356791,3a,90y,328.36h,87.55t/data=!3m7!1e1!3m5!1sAF1QipMZ9YgnArbwEIbTDANeSQYFu9gNqpW_2Sv8FBvY!2e10!3e12!7i4352!8i1815"
+                href="tours/tour1.html"
                 class="visiting__card card-visiting" target="_blank">
-                <div class="card-visiting__image"><img src="assets/img/visiting/1.jpg" alt="photo museum"
+                <div class="card-visiting__image"><img src="assets/img/visiting/1.webp" alt="photo museum"
                     class="card-visiting__img" width="440" height="285" loading="lazy"></div>
                 <h3 class="card-visiting__title">Royal Palace</h3>
                 <div class="card-visiting__descr">
@@ -70,9 +71,9 @@
               </a></li>
 
             <li class="visiting__card card-visiting"><a
-                href="https://www.google.com/maps/@48.8563254,2.3352706,3a,75y,90t/data=!3m7!1e1!3m5!1sAF1QipNRj_CwP4coDMYdCHj6qHeBeJpI2VxU5BUsOX4F!2e10!3e12!7i11000!8i5500"
+                href="tours/tour2.html"
                 class="visiting__card card-visiting" target="_blank">
-                <div class="card-visiting__image"><img src="assets/img/visiting/2.jpg" alt="photo museum"
+                <div class="card-visiting__image"><img src="assets/img/visiting/2.webp" alt="photo museum"
                     class="card-visiting__img" width="440" height="285" loading="lazy"></div>
                 <h3 class="card-visiting__title">Denon Wing</h3>
                 <div class="card-visiting__descr">
@@ -82,9 +83,9 @@
               </a></li>
 
             <li class="visiting__card card-visiting"><a
-                href="https://www.google.com/maps/@48.8601723,2.3395439,3a,88.4y,322.04h,84.25t/data=!3m7!1e1!3m5!1sAF1QipNMZGQuEA-pAUvIG_eP_2f3gWTKZEJ6XLVJ-Pgb!2e10!3e12!7i10240!8i5120"
+                href="tours/tour3.html"
                 class="visiting__card card-visiting" target="_blank">
-                <div class="card-visiting__image"><img src="assets/img/visiting/3.jpg" alt="photo museum"
+                <div class="card-visiting__image"><img src="assets/img/visiting/3.webp" alt="photo museum"
                     class="card-visiting__img" width="440" height="285" loading="lazy"></div>
                 <h3 class="card-visiting__title">Colonnade Perrault</h3>
                 <div class="card-visiting__descr">
@@ -94,9 +95,9 @@
               </a></li>
 
             <li class="visiting__card card-visiting"><a
-                href="https://www.google.com/maps/@48.860183,2.3356156,3a,90y,177.69h,95.61t/data=!3m7!1e1!3m5!1sAF1QipP7uFZnTITRe-7AEVAgHAfqiCL-03gvBHcYWgF3!2e10!3e12!7i5472!8i2736"
+                href="tours/tour4.html"
                 class="visiting__card card-visiting" target="_blank">
-                <div class="card-visiting__image"><img src="assets/img/visiting/4.jpg" alt="photo museum"
+                <div class="card-visiting__image"><img src="assets/img/visiting/4.webp" alt="photo museum"
                     class="card-visiting__img" width="440" height="285" loading="lazy"></div>
                 <h3 class="card-visiting__title">Greek hall</h3>
                 <div class="card-visiting__descr">
@@ -106,9 +107,9 @@
               </a></li>
 
             <li class="visiting__card card-visiting"><a
-                href="https://www.google.com/maps/@48.8598788,2.3355157,3a,82.2y,7.53h,94t/data=!3m7!1e1!3m5!1sAF1QipO1wkUUbyzpPjj-OR0mR5etZJT-xl-40XK8rDQ3!2e10!3e12!7i10240!8i5120"
+                href="tours/tour5.html"
                 class="visiting__card card-visiting" target="_blank">
-                <div class="card-visiting__image"><img src="assets/img/visiting/5.jpg" alt="photo museum"
+                <div class="card-visiting__image"><img src="assets/img/visiting/5.webp" alt="photo museum"
                     class="card-visiting__img" width="440" height="285" loading="lazy"></div>
                 <h3 class="card-visiting__title">Mona Lisa</h3>
                 <div class="card-visiting__descr">
@@ -118,9 +119,9 @@
               </a></li>
 
             <li class="visiting__card card-visiting"><a
-                href="https://www.google.com/maps/@48.8563254,2.3352706,3a,90y,21.26h,79.91t/data=!3m7!1e1!3m5!1sAF1QipPpGAowYatVyk3MMGnZAaQkYm2EUk-Dlca06SS5!2e10!3e12!7i11304!8i5652"
+                href="tours/tour6.html"
                 class="visiting__card card-visiting" target="_blank">
-                <div class="card-visiting__image"><img src="assets/img/visiting/6.jpg" alt="photo museum"
+                <div class="card-visiting__image"><img src="assets/img/visiting/6.webp" alt="photo museum"
                     class="card-visiting__img" width="440" height="285" loading="lazy"></div>
                 <h3 class="card-visiting__title">Night Palace</h3>
                 <div class="card-visiting__descr">
@@ -149,7 +150,7 @@
             </div>
           </div>
           <div class="explore__images">
-            <img src="assets/img/explore-slider/after.jpg" alt="slider">
+            <img src="assets/img/explore-slider/after.webp" alt="slider">
           </div>
         </div>
       </section>
@@ -175,7 +176,7 @@
         <div class="tickets__container">
         </div>
       </section>
-
+      <div class="parallax"></div>
       <section id="contacts" class="page__contacts contacts">
         <div class="contacts__container">
         </div>
