--- a/src/tours/tour1.html
+++ b/src/tours/tour1.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Louvre tour 1</title>
+    <title>Royal Palace tour 2</title>
     <link rel="icon" href="../assets/favicon.ico">
 </head>
 <body style="margin: 0; height: 100vh;">
-    <iframe src="https://www.google.com/maps/embed?pb=!4v1632606497292!6m8!1m7!1sCAoSLEFGMVFpcE9WeFpRdVN5M0J4OVRfSHBIXzdGdEJIRFRYdkk2U0YtQTEwb2NU!2m2!1d48.86181593314584!2d2.336681797486702!3f81.55!4f-16.599999999999994!5f0.7820865974627469" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!4v1632607086322!6m8!1m7!1sCAoSLEFGMVFpcE1aOVlnbkFyYndFSWJUREFOZVNRWUZ1OWdOcXBXXzJTdjhGQnZZ!2m2!1d48.8606881835717!2d2.335679134426641!3f328.36!4f-2.450000000000003!5f0.4000000000000002" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </body>
 </html>
