--- a/src/tours/tour5.html
+++ b/src/tours/tour5.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greek Hall tour 5</title>
+    <title>Mona Lisa tour 6</title>
     <link rel="icon" href="../assets/favicon.ico">
 </head>
 <body style="margin: 0; height: 100vh;">
-    <iframe src="https://www.google.com/maps/embed?pb=!4v1632607330482!6m8!1m7!1sCAoSLEFGMVFpcFA3dUZablRJVFJlLTdBRVZBZ0hBZnFpQ0wtMDNndkJIY1lXZ0Yz!2m2!1d48.86018303140322!2d2.335615591987402!3f177.69!4f5.609999999999999!5f0.4000000000000002" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!4v1632607414362!6m8!1m7!1sCAoSLEFGMVFpcE8xd2tVVWJ5enBQamotT1IwbVI1ZXRaSlQteGwtNDBYSzhyRFEz!2m2!1d48.85987877384653!2d2.335515730085149!3f7.53!4f4!5f0.5970117501821992" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </body>
 </html>
