feat: add footer desctop version

--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,8 @@
               </div>
             </div>
             <div class="welcome__action">
-              <a href="tours/tour-welcome.html"
-                class="welcome__btn btn btn--accent" target="_blank">Discover the Louvre</a>
+              <a href="tours/tour-welcome.html" class="welcome__btn btn btn--accent" target="_blank">Discover the
+                Louvre</a>
             </div>
           </div>
         </div>
@@ -58,9 +58,8 @@
             <div class="header-block__line"></div>
           </div>
           <ul class="visiting__cards">
-            <li class="visiting__card card-visiting"><a
-                href="tours/tour1.html"
-                class="visiting__card card-visiting" target="_blank">
+            <li class="visiting__card card-visiting"><a href="tours/tour1.html" class="visiting__card card-visiting"
+                target="_blank">
                 <div class="card-visiting__image"><img src="assets/img/visiting/1.webp" alt="photo museum"
                     class="card-visiting__img" width="440" height="285" loading="lazy"></div>
                 <h3 class="card-visiting__title">Royal Palace</h3>
@@ -70,9 +69,8 @@
                 </div>
               </a></li>
 
-            <li class="visiting__card card-visiting"><a
-                href="tours/tour2.html"
-                class="visiting__card card-visiting" target="_blank">
+            <li class="visiting__card card-visiting"><a href="tours/tour2.html" class="visiting__card card-visiting"
+                target="_blank">
                 <div class="card-visiting__image"><img src="assets/img/visiting/2.webp" alt="photo museum"
                     class="card-visiting__img" width="440" height="285" loading="lazy"></div>
                 <h3 class="card-visiting__title">Denon Wing</h3>
@@ -82,9 +80,8 @@
                 </div>
               </a></li>
 
-            <li class="visiting__card card-visiting"><a
-                href="tours/tour3.html"
-                class="visiting__card card-visiting" target="_blank">
+            <li class="visiting__card card-visiting"><a href="tours/tour3.html" class="visiting__card card-visiting"
+                target="_blank">
                 <div class="card-visiting__image"><img src="assets/img/visiting/3.webp" alt="photo museum"
                     class="card-visiting__img" width="440" height="285" loading="lazy"></div>
                 <h3 class="card-visiting__title">Colonnade Perrault</h3>
@@ -94,9 +91,8 @@
                 </div>
               </a></li>
 
-            <li class="visiting__card card-visiting"><a
-                href="tours/tour4.html"
-                class="visiting__card card-visiting" target="_blank">
+            <li class="visiting__card card-visiting"><a href="tours/tour4.html" class="visiting__card card-visiting"
+                target="_blank">
                 <div class="card-visiting__image"><img src="assets/img/visiting/4.webp" alt="photo museum"
                     class="card-visiting__img" width="440" height="285" loading="lazy"></div>
                 <h3 class="card-visiting__title">Greek hall</h3>
@@ -106,9 +102,8 @@
                 </div>
               </a></li>
 
-            <li class="visiting__card card-visiting"><a
-                href="tours/tour5.html"
-                class="visiting__card card-visiting" target="_blank">
+            <li class="visiting__card card-visiting"><a href="tours/tour5.html" class="visiting__card card-visiting"
+                target="_blank">
                 <div class="card-visiting__image"><img src="assets/img/visiting/5.webp" alt="photo museum"
                     class="card-visiting__img" width="440" height="285" loading="lazy"></div>
                 <h3 class="card-visiting__title">Mona Lisa</h3>
@@ -118,9 +113,8 @@
                 </div>
               </a></li>
 
-            <li class="visiting__card card-visiting"><a
-                href="tours/tour6.html"
-                class="visiting__card card-visiting" target="_blank">
+            <li class="visiting__card card-visiting"><a href="tours/tour6.html" class="visiting__card card-visiting"
+                target="_blank">
                 <div class="card-visiting__image"><img src="assets/img/visiting/6.webp" alt="photo museum"
                     class="card-visiting__img" width="440" height="285" loading="lazy"></div>
                 <h3 class="card-visiting__title">Night Palace</h3>
@@ -185,6 +179,60 @@
     </main>
     <footer id="footer" class="footer">
       <div class="footer__container">
+        <div class="footer__top">
+          <a href="#" data-goto=".hero" class="footer__logo logo">
+            <img class="logo--img" src="assets/img/logo-header.svg" alt="logo museum">
+            <div class="logo--text">Louvre</div>
+          </a>
+          <nav class="footer__menu menu-footer">
+            <ul class="menu-footer__list">
+              <div class="menu-footer__column">
+                <li class="menu-footer__item"><a href="#" data-goto=".visiting" class="menu-footer__link hover-link">Visiting</a></li>
+                <li class="menu-footer__item"><a href="#" data-goto=".explore" class="menu-footer__link hover-link">Explore</a></li>
+                <li class="menu-footer__item"><a href="#" data-goto=".video" class="menu-footer__link hover-link">Video</a></li>
+              </div>
+              <div class="menu-footer__column">
+                <li class="menu-footer__item"><a href="#" data-goto=".gallery" class="menu-footer__link hover-link">Gallery</a></li>
+                <li class="menu-footer__item"><a href="#" data-goto=".tickets" class="menu-footer__link hover-link">Tickets</a></li>
+                <li class="menu-footer__item"><a href="#" data-goto=".contacts" class="menu-footer__link hover-link">Contacts</a></li>
+              </div>
+            </ul>
+          </nav>
+          <div class="footer__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a href="https://www.youtube.com/user/louvre" target="_blank">
+                  <img src="assets/svg/social/youtube.svg" alt="youtube">
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="https://www.instagram.com/museelouvre/" target="_blank">
+                  <img src="assets/svg/social/instagram.svg" alt="inst">
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="https://www.facebook.com/museedulouvre" target="_blank">
+                  <img src="assets/svg/social/facebook.svg" alt="facebook">
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="http://twitter.com/museelouvre" target="_blank">
+                  <img src="assets/svg/social/twitter.svg" alt="twitter">
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="https://www.pinterest.fr/museedulouvre/" target="_blank">
+                  <img src="assets/svg/social/pinterest.svg" alt="pinterest">
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__bottom">
+          <span class="year-development">© 2025</span>
+          <a href="https://rs.school/" class="footer__bottom--school hover-link" target="_blank">The Rolling Scopes School</a>
+          <a href="https://github.com/ivan1986mrpl" class="footer__bottom--developer hover-link" target="_blank">ivan1986mrpl</a>
+        </div>
       </div>
     </footer>
 
