--- a/src/index.html
+++ b/src/index.html
@@ -139,13 +139,25 @@
               <p>Las Meninas is a 1656 painting by Diego Velázquez, the leading artist of the Spanish Golden Age.</p>
               <p>It was cleaned in 1984 to remove a <span class="color-span">"yellow veil"</span> of dust that had
                 gathered since the previous restoration in the 19th century.</p>
-              <p>The cleaning provoked furious protests, not because the picture had been damaged in any way, but
+              <p class="explore__text--hidden">The cleaning provoked furious protests, not because the picture had been damaged in any way, but
                 because it looked different.</p>
             </div>
           </div>
-          <div class="explore__images">
-            <img src="assets/img/explore-slider/after.webp" alt="slider">
+          <div class="restore__example explore__images">
+            <div id="example">
+                <div class="slider-comparison">
+                  <span></span>
+                </div>
+                  <input type="range" min="0" max="100" value="50">
+                <div class="photo before-img">
+                  <img src="assets/img/explore-slider/before.webp" alt="Before slide">
+                </div>
+                <div class="photo after-img">
+                  <img src="assets/img/explore-slider/after.webp" alt="After slide">
+                </div>
+            </div>
           </div>
+
         </div>
       </section>
 
