--- a/src/index.html
+++ b/src/index.html
@@ -144,9 +144,11 @@
                 because it looked different.</p>
             </div>
           </div>
-          <div class="explore__images slider-comparison"><!-- slider-comparison__ -->
-            <img src="assets/img/explore-slider/after.webp" alt="after image" class="slider-comparison__img slider-comparison__img--after" loading="lazy">
-            <img src="assets/img/explore-slider/before.webp" alt="before image" class="slider-comparison__img slider-comparison__img--before" loading="lazy"
+          <div class="explore__images slider-comparison">
+            <img src="assets/img/explore-slider/after.webp" alt="after image"
+              class="slider-comparison__img slider-comparison__img--after" loading="lazy">
+            <img src="assets/img/explore-slider/before.webp" alt="before image"
+              class="slider-comparison__img slider-comparison__img--before" loading="lazy"
               style="clip-path: polygon(0px 0px, 53% 0px, 53% 100%, 0px 100%);">
             <div class="slider-comparison__line-top" style="left: 53%;"></div>
             <div class="slider-comparison__line-bottom" style="left: 53%;"></div>
@@ -180,6 +182,33 @@
       <div class="parallax"></div>
       <section id="contacts" class="page__contacts contacts">
         <div class="contacts__container">
+          <div class="contacts__header-block header-block">
+            <h2 class="contacts__title header-block__title">Contacts</h2>
+            <div class="header-block__line"></div>
+          </div>
+          <div class="contacts__content">
+            <ul class="contacts__address address">
+              <li>
+                <h3 class="address__title">Palais Royal<br> Musee du Louvre</h3>
+              </li>
+              <li class="address__item"><span class="address__link">address: 75001 Paris, France</span></li>
+              <li class="address__item">
+                <span class="address__span">phone: </span>
+                <a href="tel:+330140205050" class="address__link hover-link">+33(0) 1 40 20 50 50</a>
+              </li>
+              <li class="address__item">
+                <span class="address__span">mail: </span>
+                <a href="mailto:info@louvre.fr" class="address__link hover-link">info@louvre.fr</a>
+              </li>
+            </ul>
+            <div id="
+            map" class="contacts__map map">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10499.212570619604!2d2.325642918775264!3d48.861964141318836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e25d0482b3d%3A0x1c0b82c6e1d85100!2zNzUwMDEg0J_QsNGA0LjQtiwg0KTRgNCw0L3RhtC40Y8!5e0!3m2!1sru!2sro!4v1752657985792!5m2!1sru!2sro"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
+            </div>
+          </div>
         </div>
       </section>
 
