feat: add swiper

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,32 @@
                 Louvre</a>
             </div>
           </div>
-        </div>
+          <div class="welcome__images">
+            <div class="swiper slider-welcome__swiper">
+              <div class="swiper-wrapper slider-welcome__wrapper">
+                <div class="swiper-slide slider-welcome__slide">
+                  <img src="assets/img/welcome-slider/1.webp" alt="slide">
+                </div>
+                <div class="swiper-slide slider-welcome__slide">
+                  <img src="assets/img/welcome-slider/2.webp" alt="slide">
+                </div>
+                <div class="swiper-slide slider-welcome__slide">
+                  <img src="assets/img/welcome-slider/3.webp" alt="slide">
+                </div>
+                <div class="swiper-slide slider-welcome__slide">
+                  <img src="assets/img/welcome-slider/4.webp" alt="slide">
+                </div>
+                <div class="swiper-slide slider-welcome__slide">
+                  <img src="assets/img/welcome-slider/5.webp" alt="slide">
+                </div>
+              </div>
+              <div class="swiper-pagination slider-welcome__pagination"></div>
+              <div class="swiper-button-prev slider-welcome__prew"></div>
+              <div class="swiper-button-next slider-welcome__next"></div>
+
+              </div>
+            </div>
+          </div>
       </section>
 
       <section id="visiting" class="page__visiting visiting">
@@ -201,8 +226,7 @@
                 <a href="mailto:info@louvre.fr" class="address__link hover-link">info@louvre.fr</a>
               </li>
             </ul>
-            <div id="
-            map" class="contacts__map map">
+            <div id="map" class="contacts__map map">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10499.212570619604!2d2.325642918775264!3d48.861964141318836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e25d0482b3d%3A0x1c0b82c6e1d85100!2zNzUwMDEg0J_QsNGA0LjQtiwg0KTRgNCw0L3RhtC40Y8!5e0!3m2!1sru!2sro!4v1752657985792!5m2!1sru!2sro"
                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
