feat: add welcome section and slider welcome

--- a/src/index.html
+++ b/src/index.html
@@ -55,25 +55,33 @@
                   <img src="assets/img/welcome-slider/1.webp" alt="slide">
                 </div>
                 <div class="swiper-slide slider-welcome__slide">
-                  <img src="assets/img/welcome-slider/2.webp" alt="slide">
+                  <img src="assets/img/welcome-slider/2.webp" alt="slide" loading="lazy">
                 </div>
                 <div class="swiper-slide slider-welcome__slide">
-                  <img src="assets/img/welcome-slider/3.webp" alt="slide">
+                  <img src="assets/img/welcome-slider/3.webp" alt="slide" loading="lazy">
                 </div>
                 <div class="swiper-slide slider-welcome__slide">
-                  <img src="assets/img/welcome-slider/4.webp" alt="slide">
+                  <img src="assets/img/welcome-slider/4.webp" alt="slide" loading="lazy">
                 </div>
                 <div class="swiper-slide slider-welcome__slide">
-                  <img src="assets/img/welcome-slider/5.webp" alt="slide">
+                  <img src="assets/img/welcome-slider/5.webp" alt="slide" loading="lazy">
                 </div>
               </div>
-              <div class="swiper-pagination slider-welcome__pagination"></div>
-              <div class="swiper-button-prev slider-welcome__prew"></div>
-              <div class="swiper-button-next slider-welcome__next"></div>
-
+              <div class="slider-welcome__controls">
+                <div class="counter slider-welcome__counter">01 | 05</div>
+                <div class="swiper-pagination slider-welcome__dots dots"></div>
+                <div class="slider-welcome__buttons">
+                  <div class="swiper-button-prev slider-welcome__prew">
+                    <img src="assets/svg/prew1.svg" alt="Image">
+                  </div>
+                  <div class="swiper-button-next slider-welcome__next">
+                    <img src="assets/svg/next1.svg" alt="Image">
+                  </div>
+                </div>
               </div>
             </div>
           </div>
+        </div>
       </section>
 
       <section id="visiting" class="page__visiting visiting">
