--- a/src/index.html
+++ b/src/index.html
@@ -296,10 +296,60 @@
         </div>
       </section>
 
-      <section id="tickets" class="page__tickets tickets">
+      <section class="page__tickets tickets" id="tickets">
         <div class="tickets__container">
+          <div class="tickets__header-block header-block">
+            <h2 class="tickets__title header-block__title">Buy Tickets</h2>
+            <div class="header-block__line"></div>
+          </div>
+          <div class="tickets__content">
+            <div class="tickets__image">
+              <img src="assets/img/ticket/Rectangle.webp" alt="img" class="tickets__img">
+            </div>
+            <div class="tickets__booking">
+              <div class="tickets__column">
+                <div class="tickets__type">
+                  <h3 class="tickets__type-title">Ticket Type</h3>
+                  <label class="input-container">Permanent exhibition
+                    <input type="radio" value="20" checked="checked" name="radioInput">
+                    <span class="checkmark"></span>
+                  </label>
+                  <label class="input-container">Temporary exhibition
+                    <input type="radio" value="25" name="radioInput">
+                    <span class="checkmark"></span>
+                  </label>
+                  <label class="input-container">Combined Admission
+                    <input type="radio" value="40" name="radioInput">
+                    <span class="checkmark"></span>
+                  </label>
+                </div>
+              </div>
+              <div class="tickets__column tickets__column--flex-end">
+                <div class="tickets__amount amount">
+                  <h3 class="amount__title">Amount</h3>
+                  <h4 class="amount__subtitle">Basic 18+</h4>
+                  <div class="amount__number-wrap">
+                    <button type="button" class="amount__input">–</button>
+                    <input type="number" min="0" max="20" value="0" readonly
+                      class="amount__number amount__number--basic">
+                    <button type="button" class="amount__input">+</button>
+                  </div>
+                  <h4 class="amount__subtitle">Senior 65+</h4>
+                  <div class="amount__number-wrap">
+                    <button type="button" class="amount__input">–</button>
+                    <input type="number" min="0" max="20" value="0" readonly
+                      class="amount__number amount__number--senior">
+                    <button type="button" class="amount__input">+</button>
+                  </div>
+                  <span class="amount__price">Total €<span>0</span></span>
+                </div>
+                <button class="tickets__btn btn">Buy Now</button>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
+
       <div class="parallax"></div>
       <section id="contacts" class="page__contacts contacts">
         <div class="contacts__container">
