--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,7 @@
         </div>
       </section>
 
-      <!-- <section class="page__video video" id="video">
+      <section class="page__video video" id="video">
         <div class="video__container">
           <div class="video__video-section">
             <div class="video__header-block header-block">
@@ -259,9 +259,9 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="page__gallery gallery" id="gallery">
+      <section class="page__gallery gallery" id="gallery">
         <div class="gallery__container">
           <div class="gallery__header-block header-block">
             <h2 class="gallery__title header-block__title header-block__title--white">Art Gallery</h2>
@@ -274,23 +274,24 @@
                 <img src="assets/img/galery/galery3.webp" alt="img" class="gallery__img">
                 <img src="assets/img/galery/galery4.webp" alt="img" class="gallery__img">
               </div>
-              <div class="gallery__column middle">
+              <div class="gallery__column gallery__column--middle">
                 <img src="assets/img/galery/galery5.webp" alt="img" class="gallery__img">
                 <img src="assets/img/galery/galery6.webp" alt="img" class="gallery__img">
                 <img src="assets/img/galery/galery7.webp" alt="img" class="gallery__img">
                 <img src="assets/img/galery/galery8.webp" alt="img" class="gallery__img">
               </div>
-              <div class="gallery__column">
+              <div class="gallery__column gallery__column--last">
                 <img src="assets/img/galery/galery9.webp" alt="img" class="gallery__img">
                 <img src="assets/img/galery/galery10.webp" alt="img" class="gallery__img">
                 <img src="assets/img/galery/galery11.webp" alt="img" class="gallery__img">
                 <img src="assets/img/galery/galery12.webp" alt="img" class="gallery__img">
               </div>
             </div>
+            
           </div>
-          <div class="gallery__shadow"></div>
         </div>
-      </section> -->
+        <div class="gallery__shadow"></div>
+      </section>
 
       <!-- <section class="page__tickets tickets" id="tickets">
         <div class="tickets__container">
