feat: add contacts adaptiv

--- a/src/index.html
+++ b/src/index.html
@@ -293,14 +293,14 @@
         <div class="gallery__shadow"></div>
       </section>
 
-      <!-- <section class="page__tickets tickets" id="tickets">
+      <section class="page__tickets tickets" id="tickets">
         <div class="tickets__container">
           <div class="tickets__header-block header-block">
             <h2 class="tickets__title header-block__title">Buy Tickets</h2>
             <div class="header-block__line"></div>
           </div>
           <div class="tickets__content">
-            <div class="tickets__image">
+            <div class="tickets__image ibg">
               <img src="assets/img/ticket/Rectangle.webp" alt="img" class="tickets__img">
             </div>
             <div class="tickets__booking">
@@ -345,10 +345,11 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <div class="parallax"></div>
-      <!-- <section id="contacts" class="page__contacts contacts">
+
+      <section id="contacts" class="page__contacts contacts">
         <div class="contacts__container">
           <div class="contacts__header-block header-block">
             <h2 class="contacts__title header-block__title">Contacts</h2>
@@ -377,7 +378,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
     </main>
     <footer id="footer" class="footer">
