fix: fix script video-player

--- a/src/index.html
+++ b/src/index.html
@@ -227,74 +227,32 @@
             </div>
           </div>
 
-          <!-- Swiper слайдер -->
           <div class="swiper video__slider slider-video">
             <div class="swiper-wrapper slider-video__wrapper">
-              <div class="swiper-slide iframe-wrapper slider-video__slide" data-video-id="zp1BXPX8jcU">
-                <div class="video-container"></div>
-                <button class="play-btn"></button>
+              <div class="swiper-slide slider-video__slide" data-video-id="zp1BXPX8jcU">
+                <div class="slider-video__video-container video-container" id="player-zp1BXPX8jcU"></div>
+                <img class="slider-video__video-thumb video-thumb" src="assets/video/poster0.webp" alt="preview" loading="lazy">
+                <button class="slider-video__play-btn play-btn" aria-label="Play video"></button>
               </div>
-              <div class="swiper-slide iframe-wrapper slider-video__slide" data-video-id="Vi5D6FKhRmo">
-                <div class="video-container"></div>
-                <button class="play-btn"></button>
+              <div class="swiper-slide slider-video__slide" data-video-id="Vi5D6FKhRmo">
+                <div class="slider-video__video-container slider-video__ video-container" id="player-Vi5D6FKhRmo"></div>
+                <img class="slider-video__video-thumb slider-video__ video-thumb" src="assets/video/poster1.webp" alt="preview" loading="lazy">
+                <button class="slider-video__play-btn slider-video__ play-btn" aria-label="Play video"></button>
               </div>
-              <div class="swiper-slide iframe-wrapper slider-video__slide" data-video-id="NOhDysLnTvY">
-                <div class="video-container"></div>
-                <button class="play-btn"></button>
+              <div class="swiper-slide slider-video__slide" data-video-id="NOhDysLnTvY">
+                <div class="slider-video__video-container video-container" id="player-NOhDysLnTvY"></div>
+                <img class="slider-video__video-thumb video-thumb" src="assets/video/poster2.webp" alt="preview" loading="lazy">
+                <button class="slider-video__play-btn play-btn" aria-label="Play video"></button>
               </div>
-              <div class="swiper-slide iframe-wrapper slider-video__slide" data-video-id="aWmJ5DgyWPI">
-                <div class="video-container"></div>
-                <button class="play-btn"></button>
+              <div class="swiper-slide slider-video__slide" data-video-id="aWmJ5DgyWPI">
+                <div class="slider-video__video-container video-container" id="player-aWmJ5DgyWPI"></div>
+                <img class="slider-video__video-thumb video-thumb" src="assets/video/poster3.webp" alt="preview" loading="lazy">
+                <button class="slider-video__play-btn play-btn" aria-label="Play video"></button>
               </div>
-              <div class="swiper-slide iframe-wrapper slider-video__slide" data-video-id="2OR0OCr6uRE">
-                <div class="video-container"></div>
-                <button class="play-btn"></button>
-              </div>
-            </div>
-            <div class="slider-video__controls">
-              <div class="swiper-button-next slider-video__button slider-video__button-next"></div>
-              <div class="swiper-pagination slider-video__pagination"></div>
-              <div class="swiper-button-prev slider-video__button slider-video__button-prev"></div>
-            </div>
-          </div>
-
-          <!-- Подключи YouTube API -->
-          <script src="https://www.youtube.com/iframe_api"></script>
-
-
-
-
-          <!-- <div class="swiper video__slider slider-video">
-            <div class="swiper-wrapper slider-video__wrapper">
-              <div class="swiper-slide iframe-wrapper slider-video__slide">
-                <iframe src="https://www.youtube.com/embed/zp1BXPX8jcU?si=JPrVlbV1fCzqO2Qs" title="YouTube video player"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
-              </div>
-              <div class="swiper-slide iframe-wrapper slider-video__slide">
-                <iframe src="https://www.youtube.com/embed/Vi5D6FKhRmo?si=UwCULNj1BP0z-nZQ" title="YouTube video player"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
-              </div>
-              <div class="swiper-slide iframe-wrapper slider-video__slide">
-                <iframe src="https://www.youtube.com/embed/NOhDysLnTvY?si=h5hf0NdCM0C8xEvN" title="YouTube video player"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
-              </div>
-              <div class="swiper-slide iframe-wrapper slider-video__slide">
-                <iframe src="https://www.youtube.com/embed/aWmJ5DgyWPI?si=D7VyeK6Ry4dWGx4u" title="YouTube video player"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
-              </div>
-              <div class="swiper-slide iframe-wrapper slider-video__slide">
-                <iframe src="https://www.youtube.com/embed/2OR0OCr6uRE?si=N-aF6ArwcF3Akg3R" title="YouTube video player"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
+              <div class="swiper-slide slider-video__slide" data-video-id="2OR0OCr6uRE">
+                <div class="slider-video__video-container video-container" id="player-2OR0OCr6uRE"></div>
+                <img class="slider-video__video-thumb video-thumb" src="assets/video/poster4.webp" alt="preview" loading="lazy">
+                <button class="slider-video__play-btn play-btn" aria-label="Play video"></button>
               </div>
             </div>
             <div class="slider-video__controls">
@@ -302,8 +260,7 @@
               <div class="swiper-pagination slider-video__pagination"></div>
               <div class="swiper-button-prev slider-video__button slider-video__button-prev"></div>
             </div>
-          </div> -->
-
+          </div>         
 
         </div>
       </section>
