fix: add new images

--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,9 @@
                 <li class="menu__item"><a href="#" data-goto=".contacts" class="menu__link hover-link">Contacts</a></li>
               </ul>
               <div class="menu__images">
-                <div class="menu__image menu__image--1 ibg"><img src="assets/img/header-1.jpg" alt="photo" loading="lazy"></div>
-                <div class="menu__image menu__image--2"><img src="assets/img/header-2.jpg" alt="photo" loading="lazy"></div>
-                <div class="menu__image menu__image--3"><img src="assets/img/header-3.jpg" alt="photo" loading="lazy"></div>
+                <div class="menu__image menu__image--1 ibg"><img src="assets/img/header-1.webp" alt="photo" loading="lazy"></div>
+                <div class="menu__image menu__image--2"><img src="assets/img/header-2.webp" alt="photo" loading="lazy"></div>
+                <div class="menu__image menu__image--3"><img src="assets/img/header-3.webp" alt="photo" loading="lazy"></div>
               </div>
               <div class="menu__social social">
                 <ul class="social__list">
